DRY Components Made a SectionComponent that will handle open and close that I can put each section in to clean up look. Still work in progress but getting there

--- a/src/Components/Styling/App.scss
+++ b/src/Components/Styling/App.scss
@@ -49,9 +49,11 @@ a{
     color: $light-color;
     padding: 5px;
     margin: 5px;
+    width: fit-content;
+    min-width: 30%;
   }
 
-  .instructionalSection {
+  .instructionSection {
     display: flex;
     flex-wrap: wrap;
   }
