--- a/src/Components/Styling/App.scss
+++ b/src/Components/Styling/App.scss
@@ -1,4 +1,7 @@
 @import './variables.scss';
+@import './SectionComponent';
+@import './GitCommands.scss';
+@import './Footer.scss';
 
 a{
   color: $light-color;
@@ -6,22 +9,12 @@ a{
 
 .App {
     text-align: center;
+  
   }
   
-  .App-logo {
-    height: 40vmin;
-    pointer-events: none;
-  }
-  
-  @media (prefers-reduced-motion: no-preference) {
-    .App-logo {
-      animation: App-logo-spin infinite 20s linear;
-    }
-  }
-  
+ 
   .App-header {
     background-color: #282c34;
-    
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -31,38 +24,11 @@ a{
   }
   
   .App-link {
-    color: #61dafb;
+    background-color: #61dafb;
   }
   
-  @keyframes App-logo-spin {
-    from {
-      transform: rotate(0deg);
-    }
-    to {
-      transform: rotate(360deg);
-    }
-  }
-  
+html {
 
-  .instructionalBox{
-    background-color: $primary-color;
-    color: $light-color;
-    padding: 5px;
-    margin: 5px;
-    width: fit-content;
-    min-width: 30%;
-  }
-
-  .instructionSection {
-    display: flex;
-    flex-wrap: wrap;
-  }
-
-  .tableColumn {
-    width: 30%;
-    margin: 15px;
-    padding: 5px;
-   border: 5px solid $primary-color;
-   box-shadow: inset 1px 1px $light-color;
-   border-radius: 5px;
-  }
+  background-color: #61dafb;
+  height: 100vh;
+}
