--- a/src/Components/Styling/SectionComponent.scss
+++ b/src/Components/Styling/SectionComponent.scss
@@ -10,7 +10,6 @@
     margin: 5px;
     width: fit-content;
     min-width: 30%;
-
     border-radius: 10px;
     box-shadow: 1px 1px 1px $secondary-color;
   }
@@ -18,7 +17,7 @@
   .instructionSection {
     display: flex;
     flex-wrap: wrap;
-
+    justify-content: space-around;
   }
 
 .TitleClosed {
@@ -28,6 +27,7 @@
 
 .exit {
     height: 30px;
+    float: left;
   }
 
   .inactive {
