--- a/src/Components/Styling/SectionComponent.scss
+++ b/src/Components/Styling/SectionComponent.scss
@@ -1,8 +1,6 @@
 
 @import './variables.scss';
 
-  
-
 .instructionalBox{
     background-color: $primary-color;
     color: $light-color;
@@ -35,3 +33,6 @@
       justify-content: space-between;
   }
 
+.active {
+  width: 80wh;
+}
