Proper Folder Structure
Add box for proper folder structure for a new project

--- a/src/Components/Styling/App.scss
+++ b/src/Components/Styling/App.scss
@@ -2,6 +2,7 @@
 @import './SectionComponent';
 @import './GitCommands.scss';
 @import './Footer.scss';
+@import './ProjectFolderSetup.scss';
 
 a{
   color: $light-color;
