Wireframe tools Added wireframe tool resources and aligned links to left

--- a/src/Components/Styling/SectionComponent.scss
+++ b/src/Components/Styling/SectionComponent.scss
@@ -10,6 +10,7 @@
     min-width: 30%;
     border-radius: 10px;
     box-shadow: 1px 1px 1px $secondary-color;
+    text-align: left;
   }
 
   .instructionSection {
