Adds filter to Git Commands and styling to input box

--- a/src/Components/Styling/App.scss
+++ b/src/Components/Styling/App.scss
@@ -1,36 +1,33 @@
-@import './variables.scss';
-@import './SectionComponent';
-@import './GitCommands.scss';
-@import './Footer.scss';
-@import './ProjectFolderSetup.scss';
+@import "./variables.scss";
+@import "./SectionComponent";
+@import "./GitCommands.scss";
+@import "./Footer.scss";
+@import "./ProjectFolderSetup.scss";
 
-a{
+a {
   color: $light-color;
 }
 
 .App {
-    text-align: center;
-    min-height: 90vh;
-  
-  }
-  
- 
-  .App-header {
-    background-color: #282c34;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    font-size: calc(10px + 2vmin);
-    color: white;
-  }
-  
-  .App-link {
-    background-color: #61dafb;
-  }
-  
-html {
+  text-align: center;
+  min-height: 90vh;
+}
 
+.App-header {
+  background-color: #282c34;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
+}
+
+.App-link {
+  background-color: #61dafb;
+}
+
+html {
   background-color: #61dafb;
   height: 100vh;
 }
@@ -39,5 +36,10 @@ html {
   max-width: 80vw;
   box-shadow: 1px 1px 1px $light-color;
   border-radius: 10px;
-  
+}
+
+#inputSearchTerm {
+  margin: 5px;
+  border-radius: 4px;
+  padding: 2px;
 }
