--- a/src/Components/Styling/App.scss
+++ b/src/Components/Styling/App.scss
@@ -43,3 +43,9 @@ html {
   border-radius: 4px;
   padding: 2px;
 }
+
+code {
+  color: $secondary-color;
+  text-shadow: rgba(255,255,255, 0.3) 1px 1px;
+  font-family: Arial, Helvetica, sans-serif;
+}
