--- a/src/Components/Styling/App.scss
+++ b/src/Components/Styling/App.scss
@@ -49,3 +49,9 @@ code {
   text-shadow: rgba(255,255,255, 0.3) 1px 1px;
   font-family: Arial, Helvetica, sans-serif;
 }
+
+.imageSmallGroup {
+  max-width: 10vw;
+  box-shadow: 1px 1px 1px $light-color;
+  border-radius: 10px;
+}
