--- a/src/Components/Styling/Footer.css
+++ b/src/Components/Styling/Footer.css
@@ -1,14 +1,12 @@
-@import "./variables.scss";
-
 #footer {
   width: 100%;
   height: auto;
   word-wrap: break-word;
-  color: $secondary-color;
+  color: var(--secondary-color);
   text-align: center;
   font-size: 1.5rem;
   bottom: 0;
-  background-color: $primary-color;
+  background-color: var(--primary-color);
   padding: 10px;
 }
 
