--- a/src/Components/Styling/GitCommands.css
+++ b/src/Components/Styling/GitCommands.css
@@ -2,7 +2,7 @@
     width: 30%;
     margin: 15px;
     padding: 5px;
-   border: 5px solid $primary-color;
-   box-shadow: inset 1px 1px $light-color;
+   border: 5px solid var(--primary-color);
+   box-shadow: inset 1px 1px var(--light-color);
    border-radius: 5px;
   }
